--- a/src/renderer/src/assets/main.css
+++ b/src/renderer/src/assets/main.css
@@ -68,13 +68,10 @@
 
 @layer base {
   * {
-    @apply scroll-smooth border-border;
+    @apply border-border;
   }
   body {
     @apply bg-background text-foreground;
-  }
-  html {
-    scroll-padding-top: 96px; /* height of sticky header */
   }
 
   /* disable text selection */
