--- a/src/renderer/src/assets/main.css
+++ b/src/renderer/src/assets/main.css
@@ -72,7 +72,7 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply overflow-hidden bg-background text-foreground;
   }
 
   /* disable text selection */
